--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
-<link rel="stylesheet" href="style.css">
-<script src="script.js"></script>
-
+<html lang="pt-br">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Barbearia</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
 
-</body>
+  <!-- Menu -->
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#quem-somos">Quem Somos</a></li>
+        <li><a href="#contatos">Contatos</a></li>
+      </ul>
+    </nav>
+  </header>
 
+  <!-- Seções -->
+  <section id="quem-somos" class="section">
+    <h1>Quem Somos</h1>
+    <p>Bem-vindo à Barbearia! Somos especialistas em cortes de cabelo e barba com estilo e cuidado.</p>
+  </section>
+
+  <section id="contatos" class="section">
+    <h1>Contatos</h1>
+    <p>Telefone: (11) 1234-5678</p>
+    <p>Email: contato@barbearia.com</p>
+    <p>Endereço: Rua da Barbearia, 123 - Cidade</p>
+  </section>
+
+  <script src="script.js"></script>
+</body>
 </html>
