--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#quem-somos">Quem Somos</a></li>
+        <li><a href="#quem-somos">Quem Somos nós</a></li>
         <li><a href="#contatos">Contatos</a></li>
       </ul>
     </nav>
