--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Barbearia</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
 
-  <!-- Menu -->
+  <!-- Menu --> 
   <header>
     <nav>
-      <ul>
-        <li><a href="#quem-somos">Quem Somos nós</a></li>
-        <li><a href="#contatos">Contatos</a></li>
+      <ul class="menu">
+        <li><a class="item" href="#quem-somos">Quem Somos nós</a></li>
+        <li><a class="item" href="#contatos">Contatos</a></li>
       </ul>
     </nav>
   </header>
